--- a/app/src/main/res/layout/activity_illust.xml
+++ b/app/src/main/res/layout/activity_illust.xml
@@ -30,6 +30,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginEnd="16dp"
+                android:onClick="gosetting"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -50,6 +51,7 @@
     <HorizontalScrollView
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_margin="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -67,23 +69,23 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                <ImageView
-                        android:id="@+id/img1"
-                        android:layout_width="400dp"
-                        android:layout_height="560dp"
-                        android:src="@drawable/yohan"
-                        app:srcCompat="@drawable/yohan"
-                        tools:srcCompat="@drawable/yohan" />
-
-                <TextView
-                        android:id="@+id/explain1"
+                <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
-                        android:layout_height="108dp"
-                        android:gravity="center_vertical"
-                        android:text="초보 개발자"
-                        android:textAlignment="center"
-                        android:textSize="36sp"
-                        android:textStyle="bold" />
+                        android:layout_height="match_parent">
+
+                    <ImageView
+                            android:id="@+id/img1"
+                            android:layout_width="400dp"
+                            android:layout_height="600dp"
+                            android:layout_margin="8dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintVertical_bias="0.49"
+                            app:srcCompat="@drawable/illust1" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
             </LinearLayout>
 
@@ -93,23 +95,38 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                <ImageView
-                        android:id="@+id/img2"
-                        android:layout_width="400dp"
-                        android:layout_height="560dp"
-                        android:src="@drawable/yohan"
-                        app:srcCompat="@drawable/yohan"
-                        tools:srcCompat="@drawable/yohan" />
-
-                <TextView
-                        android:id="@+id/explain2"
+                <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
-                        android:layout_height="108dp"
-                        android:gravity="center_vertical"
-                        android:text="중급 개발자"
-                        android:textAlignment="center"
-                        android:textSize="36sp"
-                        android:textStyle="bold" />
+                        android:layout_height="match_parent">
+
+                    <Button
+                            android:id="@+id/illurock2"
+                            android:layout_width="400dp"
+                            android:layout_height="600dp"
+                            android:layout_margin="8dp"
+                            android:background="@color/colorPrimaryDark"
+                            android:onClick="onillu2"
+                            android:text="2단계\nLv.10 이상"
+                            android:textColor="#fff"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            app:layout_constraintBottom_toBottomOf="@+id/img2"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="@+id/img2"
+                            app:layout_constraintTop_toTopOf="@+id/img2" />
+
+                    <ImageView
+                            android:id="@+id/img2"
+                            android:layout_width="400dp"
+                            android:layout_height="600dp"
+                            android:layout_margin="8dp"
+                            android:src="@drawable/illust2"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
             </LinearLayout>
 
@@ -119,23 +136,36 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                <ImageView
-                        android:id="@+id/img3"
-                        android:layout_width="400dp"
-                        android:layout_height="560dp"
-                        android:src="@drawable/yohan"
-                        app:srcCompat="@drawable/yohan"
-                        tools:srcCompat="@drawable/yohan" />
-
-                <TextView
-                        android:id="@+id/explain3"
+                <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
-                        android:layout_height="108dp"
-                        android:gravity="center_vertical"
-                        android:text="고급 개발자"
-                        android:textAlignment="center"
-                        android:textSize="36sp"
-                        android:textStyle="bold" />
+                        android:layout_height="match_parent">
+
+                    <Button
+                            android:id="@+id/illurock3"
+                            android:layout_width="400dp"
+                            android:layout_height="600dp"
+                            android:layout_margin="8dp"
+                            android:background="@color/colorPrimaryDark"
+                            android:onClick="onillu3"
+                            android:text="3단계\nLv.20 이상"
+                            android:textColor="#fff"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            app:layout_constraintBottom_toBottomOf="@+id/img3"
+                            app:layout_constraintEnd_toEndOf="@+id/img3"
+                            app:layout_constraintStart_toStartOf="@+id/img3"
+                            app:layout_constraintTop_toTopOf="@+id/img3" />
+
+                    <ImageView
+                            android:id="@+id/img3"
+                            android:layout_width="400dp"
+                            android:layout_height="600dp"
+                            android:layout_margin="8dp"
+                            android:src="@drawable/illust3"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
             </LinearLayout>
 
