오답시 팝업 구현

--- a/app/src/main/res/layout/activity_popup.xml
+++ b/app/src/main/res/layout/activity_popup.xml
@@ -30,7 +30,7 @@
             android:layout_height="200dp"
             android:layout_gravity="center"
             android:layout_margin="20dp"
-            app:srcCompat="@drawable/correct" />
+            app:srcCompat="@drawable/wrong" />
 
     <LinearLayout
             android:layout_width="match_parent"
