--- a/app/src/main/res/layout/activity_quiz_locker.xml
+++ b/app/src/main/res/layout/activity_quiz_locker.xml
@@ -55,7 +55,7 @@
             android:paddingEnd="0dp"
             android:progress="50"
             android:progressDrawable="@drawable/progress"
-            android:thumb="@drawable/tap"
+            android:thumb="@drawable/thumb"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
