--- a/app/src/main/res/drawable/progress.xml
+++ b/app/src/main/res/drawable/progress.xml
@@ -4,7 +4,7 @@
     <item android:id="@android:id/background">
         <shape android:shape="rectangle">
             <corners android:radius="20dp"/>
-            <solid android:color="#aaaaaa" />
+            <solid android:color="#00000000" />
         </shape>
     </item>
 
@@ -13,9 +13,9 @@
         <clip>
             <shape android:shape="rectangle">
                 <corners android:radius="20dp"/>
-                <solid android:color="#aaaaaa" />
+                <solid android:color="#00000000" />
                 <stroke android:width="1px"
-                    android:color="#aaaaaa" />
+                    android:color="#00000000" />
             </shape>
         </clip>
     </item>
