--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -32,9 +32,10 @@
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:ems="10"
-                android:fontFamily="@font/noto_sans"
+                android:fontFamily="@font/notosanscjkkr_medium"
                 android:inputType="textPersonName"
                 android:text="당근 도감"
+                android:textSize="20sp"
                 android:textAlignment="center"
                 android:textColor="#FFFFFF"
                 app:layout_constraintBottom_toBottomOf="parent"
