--- a/app/src/main/res/layout/activity_quiz_locker.xml
+++ b/app/src/main/res/layout/activity_quiz_locker.xml
@@ -42,55 +42,97 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.499" />
 
-    <SeekBar
-            android:id="@+id/seekBar"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
+    <ImageView
+            android:id="@+id/imageView18"
+            android:layout_width="wrap_content"
+            android:layout_height="15dp"
+            android:layout_marginEnd="56dp"
+            app:layout_constraintBottom_toBottomOf="@+id/seekBar"
+            app:layout_constraintEnd_toStartOf="@+id/guideline"
+            app:layout_constraintTop_toTopOf="@+id/seekBar"
+            app:srcCompat="@drawable/icon_gray_left" />
+
+    <ImageView
+            android:id="@+id/imageView19"
+            android:layout_width="wrap_content"
+            android:layout_height="15dp"
+            android:layout_marginStart="56dp"
+            app:layout_constraintBottom_toBottomOf="@+id/seekBar"
+            app:layout_constraintStart_toStartOf="@+id/guideline"
+            app:layout_constraintTop_toTopOf="@+id/seekBar"
+            app:srcCompat="@drawable/icon_gray_right" />
+
+    <TextView
+            android:id="@+id/choice1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="32dp"
-            android:max="100"
-            android:maxHeight="4dp"
-            android:paddingStart="0dp"
-            android:paddingEnd="0dp"
-            android:progress="50"
-            android:progressDrawable="@drawable/progress"
-            android:thumb="@drawable/thumb"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-    <TextView
+            android:layout_marginBottom="8dp"
+            android:fontFamily="@font/notosanscjkkr_regular"
             android:text="서울"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/choice1" android:textSize="16sp"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@+id/leftImageView"
             app:layout_constraintEnd_toEndOf="@+id/leftImageView"
-            app:layout_constraintStart_toStartOf="@+id/leftImageView" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/leftImageView" app:layout_constraintHorizontal_bias="0.55"
-            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
+            app:layout_constraintHorizontal_bias="0.55"
+            app:layout_constraintStart_toStartOf="@+id/leftImageView" />
+
     <TextView
-            android:text="리스본"
+            android:id="@+id/choice2"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/choice2" android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="@+id/rightImageView"
-            app:layout_constraintStart_toStartOf="@+id/rightImageView" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/rightImageView" android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"/>
-    <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="50dp" app:srcCompat="@drawable/padlock" android:id="@+id/leftImageView"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginBottom="32dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:adjustViewBounds="true"/>
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:fontFamily="@font/notosanscjkkr_regular"
+            android:text="리스본"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@+id/rightImageView"
+            app:layout_constraintEnd_toEndOf="@+id/rightImageView"
+            app:layout_constraintStart_toStartOf="@+id/rightImageView" />
+
+    <ImageView
+            android:id="@+id/leftImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginStart="32dp"
+            android:adjustViewBounds="true"
+            app:layout_constraintBottom_toBottomOf="@+id/seekBar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/seekBar"
+            app:srcCompat="@drawable/icon_carrot_gray" />
 
     <ImageView
             android:id="@+id/rightImageView"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="32dp"
+            android:layout_marginEnd="32dp"
             android:adjustViewBounds="true"
+            app:layout_constraintBottom_toBottomOf="@+id/seekBar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/seekBar"
+            app:srcCompat="@drawable/icon_carrot_gray" />
+
+    <SeekBar
+            android:id="@+id/seekBar"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:max="100"
+            android:maxHeight="4dp"
+            android:paddingStart="64dp"
+            android:paddingEnd="64dp"
+            android:progress="50"
+            android:progressDrawable="@drawable/progress"
+            android:thumb="@drawable/icon_drag"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/padlock" />
+            app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.5" />
 </androidx.constraintlayout.widget.ConstraintLayout>
