회색 당근 이미지 추가

--- a/app/src/main/res/layout/activity_quiz_locker.xml
+++ b/app/src/main/res/layout/activity_quiz_locker.xml
@@ -1,28 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@android:color/white"
         tools:context=".QuizLockerActivity">
 
     <TextView
+            android:id="@+id/correctCountLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:text="정답횟수 1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/correctCountLabel"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:textSize="24sp"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/wrongCountLabel"
-    />
+            android:textSize="24sp"
+            app:layout_constraintBottom_toTopOf="@+id/wrongCountLabel"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
     <TextView
-            android:text="오답횟수 3"
+            android:id="@+id/wrongCountLabel"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/wrongCountLabel"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:textSize="24sp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/quizLabel"/>
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="오답횟수 3"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toTopOf="@+id/quizLabel"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
             android:id="@+id/quizLabel"
